EB-2002-06-27-1: Bugfix:    prevent deletion of still referenced objects
                            - PE objects
                            - CKPT objects
                 Issue:     #302 (partially)

AH-2002-06-27-0: Enhancem.: Improved load alarm/suspend alarm diagnosis 
                            messages

EB-2002-06-27-0: Enhancem.: array job parameters in job array env
                 Issue:     #264

CR-2002-06-26-1: Testsuite: - new default parameter for wait_for_jobpending()
                 (Merged)     (return if job is already started)  
                 Enhancem.: - changed timeout values for access_list and
                              project_acces_lists test   

EB-2002-06-26-1: Bugfix:    qdel / qdel -f produces no output if execd is down
                 Issue:     #238

EB-2002-06-26-0: Cleanup:   replace all %s in messages by macros SFN and SFQ
                 Issue:     #252

CR-2002-06-25-0: Bugfix:    script syntax error in exe host installation
                 Issue:     #297
                 Bugtraq:   #4705893

CR-2002-06-24-0: Enhancem.  I18N : added message ids, switched off per default
                            later: use qmaster/execd parameter to enable
                                   error id output change "on the fly".

EB-2002-06-24-0: Bugfix:    host group CLI contains "DO NOT MODIFY .." comment
                 Issue:     #293

EB-2002-06-23-0: Cleanup:   Moved/renamed functions
                            Moved messages into correct msg_* files
                            Added ADOC comments
                 Issue:     #278, #281, #282
                            

EB-2002-06-17-0: Enhancem.: Now it is possible to address pe tasks with
                            the spooling functions for jobs.

CR-2002-06-17-3: Bugfix:    removed old i18n setup code

CR-2002-06-17-0: Bugfix:    Don't produce infotext error message "Binary not
                            compiled with gettext!"
